--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -4,78 +4,93 @@
 		<span class="slideno">Conservation</span>
     <a class="button-scroll" data-slide="1" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <!-- <p data-stellar-ratio="1.5" alt=""></p> -->
-      <p alt="">The stewardship of aquifers</p>
+      <p alt="">As a vital resource to more than two million South Central Texans, the Edwards Aquifer is shared by municipal, industrial, agricultural and recreational users. As such, the conservation and protection measures instituted by the EAA and regional stakeholders strive to preserve both water quantity and quality to sustain the aquifer and it’s species for future generations to enjoy.</p>
     </div>     
 	</div>
 
 	<!-- Slide 1 -->
 	<div data-parallax-background class="slide" id="cons-slide1" data-slide="1" data-parallax-ratio="0.5">
-		<span class="slideno">Slide 1</span>
+		<span class="slideno">Access</span>
     <a class="button-scroll" data-slide="2" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <div class="centered">
-        <eaa-aquifers-boundary-map></eaa-aquifers-boundary-map>
-      </div>
-    </div>      
+      <p alt="">Cities and rural homes use water for domestic purposes including drinking, landscaping, gardening, and bathing.</p>
+    </div>     
 	</div>
 
 	<!-- Slide 2 -->
 	<div data-parallax-background class="slide" id="cons-slide2" data-slide="2" data-parallax-ratio="0.5">
-		<span class="slideno">Slide 2</span>
+		<span class="slideno">Food &amp; Livestock</span>
     <a class="button-scroll" data-slide="3" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <p alt="">Thestral dirigible plums, Viktor Krum hexed memory charm Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince Invisibility Cloak cauldron cakes, hiya Harry! Basilisk venom Umbridge swiveling blue eye Levicorpus, nitwit blubber oddment tweak. Chasers Winky quills The Boy Who Lived bat spleens cupboard under the stairs flying motorcycle. Sirius Black Holyhead Harpies, you’ve got dirt on your nose. Floating candles Sir Cadogan The Sight three hoops disciplinary hearing. Grindlewald pig’s tail Sorcerer's Stone biting teacup. Side-along dragon-scale suits Filch 20 points, Mr. Potter.</p>
+      <p alt="">Farmers and ranchers have used the Edwards Aquifer for generations to irrigate crops and provide water for livestock.</p>
     </div>    
 	</div>
 
 	<!-- Slide 3 -->
 	<div data-parallax-background class="slide" id="cons-slide3" data-slide="3" data-parallax-ratio="0.5">
-		<span class="slideno">Slide 3</span>
+		<span class="slideno">Work</span>
     <a class="button-scroll" data-slide="4" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <p alt="">Thestral dirigible plums, Viktor Krum hexed memory charm Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince Invisibility Cloak cauldron cakes, hiya Harry! Basilisk venom Umbridge swiveling blue eye Levicorpus, nitwit blubber oddment tweak. Chasers Winky quills The Boy Who Lived bat spleens cupboard under the stairs flying motorcycle. Sirius Black Holyhead Harpies, you’ve got dirt on your nose. Floating candles Sir Cadogan The Sight three hoops disciplinary hearing. Grindlewald pig’s tail Sorcerer's Stone biting teacup. Side-along dragon-scale suits Filch 20 points, Mr. Potter.</p>
+      <p alt="">Industry and commerce depend on water to sustain the economy.</p>
     </div>
 	</div>
 
 	<!-- Slide 4 -->
 	<div data-parallax-background class="slide" id="cons-slide4" data-slide="4" data-parallax-ratio="0.5">
-		<span class="slideno">Slide 4</span>                 
+		<span class="slideno">Play</span>                 
     <a class="button-scroll" data-slide="5" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <p alt="">Thestral dirigible plums, Viktor Krum hexed memory charm Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince Invisibility Cloak cauldron cakes, hiya Harry! Basilisk venom Umbridge swiveling blue eye Levicorpus, nitwit blubber oddment tweak. Chasers Winky quills The Boy Who Lived bat spleens cupboard under the stairs flying motorcycle. Sirius Black Holyhead Harpies, you’ve got dirt on your nose. Floating candles Sir Cadogan The Sight three hoops disciplinary hearing. Grindlewald pig’s tail Sorcerer's Stone biting teacup. Side-along dragon-scale suits Filch 20 points, Mr. Potter.</p>
+      <p alt="">Recreational users enjoy the cool, clear aquifer waters that feed into rivers and streams.</p>
     </div>   
 	</div>
 
 	<!-- Slide 5 -->
 	<div data-parallax-background class="slide" id="cons-slide5" data-slide="5" data-parallax-ratio="0.5">
-		<span class="slideno">Slide 5</span>
+		<span class="slideno">Wild Rice</span>
     <a class="button-scroll" data-slide="6" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <p alt="">Thestral dirigible plums, Viktor Krum hexed memory charm Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince Invisibility Cloak cauldron cakes, hiya Harry! Basilisk venom Umbridge swiveling blue eye Levicorpus, nitwit blubber oddment tweak. Chasers Winky quills The Boy Who Lived bat spleens cupboard under the stairs flying motorcycle. Sirius Black Holyhead Harpies, you’ve got dirt on your nose. Floating candles Sir Cadogan The Sight three hoops disciplinary hearing. Grindlewald pig’s tail Sorcerer's Stone biting teacup. Side-along dragon-scale suits Filch 20 points, Mr. Potter.</p>
+      <p alt="">Native and endangered species also benefit from the artesian springs whose discharge sustains downstream users and freshwater inflows entering the bays and estuaries of the Texas Gulf Coast.</p>
     </div> 
 	</div>
 
 	<!-- Slide 6 -->
 	<div data-parallax-background class="slide" id="cons-slide6" data-slide="6" data-parallax-ratio="0.5">
-		<span class="slideno">Slide 6</span>         
+		<span class="slideno">Edwards Aquifer Authority Act</span>         
     <a class="button-scroll" data-slide="7" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <p alt="">Thestral dirigible plums, Viktor Krum hexed memory charm Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince Invisibility Cloak cauldron cakes, hiya Harry! Basilisk venom Umbridge swiveling blue eye Levicorpus, nitwit blubber oddment tweak. Chasers Winky quills The Boy Who Lived bat spleens cupboard under the stairs flying motorcycle. Sirius Black Holyhead Harpies, you’ve got dirt on your nose. Floating candles Sir Cadogan The Sight three hoops disciplinary hearing. Grindlewald pig’s tail Sorcerer's Stone biting teacup. Side-along dragon-scale suits Filch 20 points, Mr. Potter.</p>
+      <p alt="">The Edwards Aquifer is protected and conserved through one of the most comprehensive groundwater management plans in the country.  The Edwards Aquifer Authority Act, Texas legislation derived as a result from a federal court ruling, provided the means to limit annual water withdrawals, institute region-wide drought restrictions when necessary, and consider the effect of the EAA’s actions on downstream users.</p>
     </div> 
 	</div>
 
 	<!-- Slide 7 -->
 	<div data-parallax-background class="slide" id="cons-slide7" data-slide="7" data-parallax-ratio="0.5">
-		<span class="slideno">Slide 7</span>               
-    <a class="button-scroll" id="reverse" data-slide="0" title="" data-ng-click="buttonClick($event)"></a>
+		<span class="slideno">Spring Lake</span>               
+    <a class="button-scroll" data-slide="8" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <p alt="">Thestral dirigible plums, Viktor Krum hexed memory charm Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince Invisibility Cloak cauldron cakes, hiya Harry! Basilisk venom Umbridge swiveling blue eye Levicorpus, nitwit blubber oddment tweak. Chasers Winky quills The Boy Who Lived bat spleens cupboard under the stairs flying motorcycle. Sirius Black Holyhead Harpies, you’ve got dirt on your nose. Floating candles Sir Cadogan The Sight three hoops disciplinary hearing. Grindlewald pig’s tail Sorcerer's Stone biting teacup. Side-along dragon-scale suits Filch 20 points, Mr. Potter.</p>
+      <p alt="">The 1950’s drought of record brought historically low aquifer and spring flow levels to South Texas.  Today, a similar drought—coupled with a larger population and pumping demands—could have devastating effects on the aquifer.  Drought management plans mandated by the EAA reduce pumping during critical period to as much as 44% in the most severe stage of drought.</p>
     </div>
 	</div>
 
-	<!-- Slide 8 -->
-	<div data-parallax-background class="slide" id="cons-slide8" data-slide="8" data-parallax-ratio="0.5">
+  <!-- Slide 8 -->
+  <div data-parallax-background class="slide" id="cons-slide8" data-slide="8" data-parallax-ratio="0.5">
+    <span class="slideno">Data Slide</span>               
+    <a class="button-scroll" data-slide="9" title="" data-ng-click="buttonClick($event)"></a>
+    <div class="wrapper">
+      <eaa-aquifers-boundary-map></eaa-aquifers-boundary-map>
+    </div>
+  </div>
+
+  <!-- Slide 9 -->
+  <div data-parallax-background class="slide" id="cons-slide9" data-slide="9" data-parallax-ratio="0.5">
+    <span class="slideno">Habitat Conservation Plan Overview</span>               
+    <a class="button-scroll" id="reverse" data-slide="0" title="" data-ng-click="buttonClick($event)"></a>
+    <div class="wrapper">
+      <!-- <p alt="">TBD</p> -->
+    </div>
+  </div>
+
+	<!-- Slide END -->
+	<div data-parallax-background class="slide" id="cons-slide10" data-slide="10" data-parallax-ratio="0.5">
 		<span class="slideno">End</span>                  
 	    <div class="wrapper">
 		</div> 
