--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -1,7 +1,8 @@
 <div class="conservation">
 	<!-- Slide 0 -->
 	<div data-parallax-background class="slide" id="cons-slide0" data-slide="0" data-parallax-ratio="0.5">
-		<span class="slideno">Conservation</span>
+		<!-- <span class="slideno">Conservation</span> -->
+    <span class="slideno"><h1>Conservation</h1></span>
     <a class="button-scroll" data-slide="1" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <p alt="">As a vital resource to more than two million South Central Texans, the Edwards Aquifer is shared by municipal, industrial, agricultural and recreational users. As such, the conservation and protection measures instituted by the EAA and regional stakeholders strive to preserve both water quantity and quality to sustain the aquifer and it’s species for future generations to enjoy.</p>
@@ -10,7 +11,7 @@
 
 	<!-- Slide 1 -->
 	<div data-parallax-background class="slide" id="cons-slide1" data-slide="1" data-parallax-ratio="0.5">
-		<span class="slideno">Access</span>
+		<span class="slideno"><h1>Access</h1></span>
     <a class="button-scroll" data-slide="2" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <p alt="">Cities and rural homes use water for domestic purposes including drinking, landscaping, gardening, and bathing.</p>
@@ -19,7 +20,7 @@
 
 	<!-- Slide 2 -->
 	<div data-parallax-background class="slide" id="cons-slide2" data-slide="2" data-parallax-ratio="0.5">
-		<span class="slideno">Food &amp; Livestock</span>
+		<span class="slideno"><h1>Food &amp; Livestock</h1></span>
     <a class="button-scroll" data-slide="3" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <p alt="">Farmers and ranchers have used the Edwards Aquifer for generations to irrigate crops and provide water for livestock.</p>
@@ -28,7 +29,7 @@
 
 	<!-- Slide 3 -->
 	<div data-parallax-background class="slide" id="cons-slide3" data-slide="3" data-parallax-ratio="0.5">
-		<span class="slideno">Work</span>
+		<span class="slideno"><h1>Work</h1></span>
     <a class="button-scroll" data-slide="4" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <p alt="">Industry and commerce depend on water to sustain the economy.</p>
@@ -37,7 +38,7 @@
 
 	<!-- Slide 4 -->
 	<div data-parallax-background class="slide" id="cons-slide4" data-slide="4" data-parallax-ratio="0.5">
-		<span class="slideno">Play</span>                 
+		<span class="slideno"><h1>Play</h1></span>                 
     <a class="button-scroll" data-slide="5" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <p alt="">Recreational users enjoy the cool, clear aquifer waters that feed into rivers and streams.</p>
@@ -46,7 +47,7 @@
 
 	<!-- Slide 5 -->
 	<div data-parallax-background class="slide" id="cons-slide5" data-slide="5" data-parallax-ratio="0.5">
-		<span class="slideno">Wild Rice</span>
+		<span class="slideno"><h1>Wild Rice</h1></span>
     <a class="button-scroll" data-slide="6" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <p alt="">Native and endangered species also benefit from the artesian springs whose discharge sustains downstream users and freshwater inflows entering the bays and estuaries of the Texas Gulf Coast.</p>
@@ -55,7 +56,7 @@
 
 	<!-- Slide 6 -->
 	<div data-parallax-background class="slide" id="cons-slide6" data-slide="6" data-parallax-ratio="0.5">
-		<span class="slideno">Edwards Aquifer Authority Act</span>         
+		<span class="slideno"><h1>Edwards Aquifer Authority Act</h1></span>         
     <a class="button-scroll" data-slide="7" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <p alt="">The Edwards Aquifer is protected and conserved through one of the most comprehensive groundwater management plans in the country.  The Edwards Aquifer Authority Act, Texas legislation derived as a result from a federal court ruling, provided the means to limit annual water withdrawals, institute region-wide drought restrictions when necessary, and consider the effect of the EAA’s actions on downstream users.</p>
@@ -64,7 +65,7 @@
 
 	<!-- Slide 7 -->
 	<div data-parallax-background class="slide" id="cons-slide7" data-slide="7" data-parallax-ratio="0.5">
-		<span class="slideno">Spring Lake</span>               
+		<span class="slideno"><h1>Spring Lake</h1></span>               
     <a class="button-scroll" data-slide="8" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <p alt="">The 1950’s drought of record brought historically low aquifer and spring flow levels to South Texas.  Today, a similar drought—coupled with a larger population and pumping demands—could have devastating effects on the aquifer.  Drought management plans mandated by the EAA reduce pumping during critical period to as much as 44% in the most severe stage of drought.</p>
@@ -73,7 +74,7 @@
 
   <!-- Slide 8 -->
   <div data-parallax-background class="slide" id="cons-slide8" data-slide="8" data-parallax-ratio="0.5">
-    <span class="slideno">Data Slide</span>               
+    <span class="slideno"><h1>Data Slide</h1></span>               
     <a class="button-scroll" data-slide="9" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <eaa-aquifers-boundary-map></eaa-aquifers-boundary-map>
@@ -82,7 +83,7 @@
 
   <!-- Slide 9 -->
   <div data-parallax-background class="slide" id="cons-slide9" data-slide="9" data-parallax-ratio="0.5">
-    <span class="slideno">Habitat Conservation Plan Overview</span>               
+    <span class="slideno"><h1>Habitat Conservation Plan Overview</h1></span>               
     <a class="button-scroll" id="reverse" data-slide="0" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <!-- <p alt="">TBD</p> -->
@@ -91,7 +92,7 @@
 
 	<!-- Slide END -->
 	<div data-parallax-background class="slide" id="cons-slide10" data-slide="10" data-parallax-ratio="0.5">
-		<span class="slideno">End</span>                  
+		<span class="slideno"><h1>End</h1></span>                  
 	    <div class="wrapper">
 		</div> 
 	</div>
