Overhgauled directives for interactive objects. Should be more responsive now. Still need to verify loading order is correct. Also added content for conservation and springs sections. Additional tweaks to general CSS and UI styles as well.

--- a/app/styles/conservation.css
+++ b/app/styles/conservation.css
@@ -3,7 +3,7 @@
 *******************************/
 /*** SLIDE 0 ***/
 #cons-slide0 {
-    background-image: url(../images/conservation/XO5J7652_web.jpg);
+    background-image: url(../images/conservation/07Jul_PumpStation_CMYK_web.jpg);   
     /*background-color: #555;*/
 }
 #cons-slide0 p:first-child {
@@ -18,8 +18,8 @@
 }
 /*** SLIDE 1 ***/
 #cons-slide1 {
-    /*background-image: url(../images/conservation/**.jpg);*/
-    background-color: #222;
+    background-image: url(../images/conservation/XO5J7652_web.jpg);
+    /*background-color: #222;*/
 }
 #cons-slide1 p:first-child {
     border: 1px solid #777;
@@ -33,8 +33,8 @@
 }
 /*** SLIDE 2 ***/
 #cons-slide2 {
-    /*background-image: url(../images/conservation/**.jpg);*/
-    background-color: #555;
+    background-image: url(../images/conservation/EAAgilleland_web.jpg);
+    /*background-color: #555;*/
 }
 #cons-slide2 p:first-child {
     border: 1px solid #777;
@@ -48,8 +48,8 @@
 }
 /*** SLIDE 3 ***/
 #cons-slide3 {
-    /*background-image: url(../images/conservation/**.jpg);*/
-    background-color: #222;
+    background-image: url(../images/conservation/05May_MartinMarietta_CMYK_web.jpg);
+    /*background-color: #222;*/
 }
 #cons-slide3 p:first-child {
     border: 1px solid #777;
@@ -63,8 +63,8 @@
 }
 /*** SLIDE 4 ***/
 #cons-slide4 {
-    /*background-image: url(../images/conservation/**.jpg);*/
-    background-color: #555;
+    background-image: url(../images/conservation/08Aug_Landa_CMYK_web.jpg);
+    /*background-color: #555;*/
 }
 #cons-slide4 p:first-child {
     border: 1px solid #777;
@@ -78,8 +78,8 @@
 }
 /*** SLIDE 5 ***/
 #cons-slide5 {
-    /*background-image: url(../images/conservation/**.jpg);*/
-    background-color: #222;
+    background-image: url(../images/conservation/SM_salamander_XO5J9266_web.jpg);
+    /*background-color: #222;*/
 }
 #cons-slide5 p:first-child {
     border: 1px solid #777;
@@ -93,8 +93,9 @@
 }
 /*** SLIDE 6 ***/
 #cons-slide6 {
-    /*background-image: url(../images/conservation/**.jpg);*/
-    background-color: #555;
+    /*background-image: url(../images/conservation/EAA5587_web.jpg); */
+    background-image: url(../images/conservation/Board-Room-corner_Panorama1-P_web.jpg);  
+    /*background-color: #555;*/
 }
 #cons-slide6 p:first-child {
     border: 1px solid #777;
@@ -108,8 +109,8 @@
 }
 /*** SLIDE 7 ***/
 #cons-slide7 {
-    /*background-image: url(../images/conservation/**.jpg);*/
-    background-color: #222;
+    background-image: url(../images/conservation/EAA-rainGauge_web.jpg);
+    /*background-color: #222;*/
 }
 #cons-slide7 p:first-child {
     border: 1px solid #777;
@@ -123,5 +124,34 @@
 }
 /*** SLIDE 8 ***/
 #cons-slide8 {
+    background-color: #555;
+}
+#cons-slide8 p:first-child {
+    border: 1px solid #777;
+    -webkit-border-radius: 0 4em 0;
+    -moz-border-radius: 0 4em 0;
+    border-radius: 0 4em 0;
+    padding: 1em 2em 1em 2em;
+    opacity: 0.85;
+    text-shadow: 1px 1px 1px #000;
+    text-align: justify;
+}
+/*** SLIDE 9 ***/
+#cons-slide9 {
+  background-image: url(../images/conservation/GBRA_20121017_6763_web.jpg);
+    /*background-color: #222;  */
+}
+#cons-slide9 p:first-child {
+    border: 1px solid #777;
+    -webkit-border-radius: 0 4em 0;
+    -moz-border-radius: 0 4em 0;
+    border-radius: 0 4em 0;
+    padding: 1em 2em 1em 2em;
+    opacity: 0.85;
+    text-shadow: 1px 1px 1px #000;
+    text-align: justify;
+}
+/*** SLIDE 10 ***/
+#cons-slide10 {
     background-color: #000;
 }
