--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -1,7 +1,6 @@
 <div class="conservation">
 	<!-- Slide 0 -->
 	<div data-parallax-background class="slide" id="cons-slide0" data-slide="0" data-parallax-ratio="0.5">
-		<!-- <span class="slideno">Conservation</span> -->
     <span class="slideno"><h1>Conservation</h1></span>
     <a class="button-scroll" data-slide="1" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
@@ -86,14 +85,12 @@
     <span class="slideno"><h1>Habitat Conservation Plan Overview</h1></span>               
     <a class="button-scroll" id="reverse" data-slide="0" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <!-- <p alt="">TBD</p> -->
+      <p alt="">TBD</p>
     </div>
   </div>
 
 	<!-- Slide END -->
 	<div data-parallax-background class="slide" id="cons-slide10" data-slide="10" data-parallax-ratio="0.5">
 		<span class="slideno"><h1>End</h1></span>                  
-	    <div class="wrapper">
-		</div> 
 	</div>
 </div>
