--- a/app/styles/aquiferium-base.css
+++ b/app/styles/aquiferium-base.css
@@ -229,30 +229,14 @@ a:hover {
 **********************/
 
 eaa-aquifers-map {
-  /*width: 450px;*/
-  /*height: 450px;*/
-  /*width: 30em; /*10em;*/
-  /*height: 30em; /*10em;*/
-  /*position: absolute;*/
-  /*float: left;*/
-  /*display: inline-block;*/
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   cursor: pointer;
   outline: solid 2px #fff;
 }
 
 eaa-aquifers-boundary-map {
-  /*width: 450px;*/
-  /*height: 450px;*/
-  /*width: 30em; /*10em;*/
-  /*height: 30em; /*10em;*/
-  width: 99.8%;
-  /*position: absolute;*/
-  /*float: left;*/
-  /*display: inline-block;*/
-  margin-left: auto;
-  margin-right: auto;
+  /*width: 99.8%;*/
+  margin: auto;
   cursor: pointer;
   outline: solid 2px #fff;
 }
@@ -296,59 +280,56 @@ eaa-aquifers-boundary-map {
   -o-background-size: cover;
   background-size: cover;    
   box-shadow: inset 0px 10px 10px rgba(0, 0, 0, 0.3);
-  padding-left: 1em;
 }
 .slide p:first-child {
   position: absolute;
   border: 1px solid #fff;
-  top: 12%;
-  left: 2%;
-  width: 40%;
-  padding: 0.4em 0.8em;
+  top: 10%;
+  left: 3%;
+  width: 50%;
   color: #fff;
   background-color: #111;
   box-shadow: 0 0 1em #000;
 }
 .slideno {
   position: absolute;
-  /*top: 0;*/
-  /*left: 2%;*/
-  color: rgba(255, 255, 255, 1);     /* rgba(240, 240, 240, 0.9);  rgba(143, 129, 0, 1);  rgba(171, 101, 13, 1);  rgba(113, 178, 201, 1);*/
+  color: rgba(255, 255, 255, 1);
   text-shadow:
     -1px -1px 0 #000,  
     1px -1px 0 #000,
     -1px 1px 0 #000,
     1px 1px 0 #000;
 }
-.wrapper {
-  width: 100%;
-  min-width: 100%;
-  height: 900px;
-  margin: 0 auto;
-  position: relative;
-}
 /* buttons */
+@-webkit-keyframes pulse_animation {
+  0% { -webkit-transform: scale(1); }
+  10% { -webkit-transform: scale(1); }
+  50% { -webkit-transform: scale(0.8); }
+  90% { -webkit-transform: scale(1); }
+  100% { -webkit-transform: scale(1); }
+}
+
 .button-scroll {
   display: block;
   width: 50px;
   height: 50px;
   position: absolute;
-  top: 13%;
-  left: 45%;
+  top: 10%;
+  left: 2%;
   z-index: 10;
-  color: #ddd;
-  /*background-image: url(../images/arrow.png);*/
-  /*background-repeat: no-repeat;*/
   width: 0; 
   height: 0; 
   border-top: 2em solid rgba(175, 175, 175, 0.6);   /* #4298B5; #425968; rgba(255, 255, 255, 1); rgba(0, 0, 0, .7); rgba(119, 119, 119, 0.7); */
   border-left: 2em solid transparent;
   border-right: 2em solid transparent;
+  -webkit-animation-name: 'pulse_animation';
+  -webkit-animation-duration: 2000ms;
+  -webkit-transform-origin:70% 70%;
+  -webkit-animation-iteration-count: 3; /* set to a number for finite pulses or infinite for infinite pulses. */
+  -webkit-animation-timing-function: ease-in-out;
 }
 .button-scroll:hover {
   cursor:pointer;
-  /*background-image:url(../images/arrow-invert.png);
-  background-repeat:no-repeat;*/
   width: 0; 
   height: 0; 
   border-top: 2em solid rgba(255, 255, 255, 0.6);   /*  #71B2C9 also rgba(113, 178, 201, 1); rgba(0, 0, 0, 1); #AB650D*/  
@@ -359,6 +340,8 @@ eaa-aquifers-boundary-map {
    box-shadow: none;
 }
 #reverse {
+  top: 8.6%;
+  left: 0;
   behavior:url(-ms-transform.htc);
   /* Firefox */
   -moz-transform:rotate(180deg);
@@ -373,29 +356,13 @@ eaa-aquifers-boundary-map {
   /* IE8 */
   /*-ms-filter: "progid:DXImageTransform.Microsoft.Matrix(SizingMethod='auto expand', M11=0.7071067811865476, M12=-0.7071067811865475, M21=0.7071067811865475, M22=0.7071067811865476)"; */
 }
-/************
-*  D3 TETS  *
-************/
-donut-chart {
-  /*width: 450px;*/
-  /*height: 450px;*/
-  width: 30em; /*10em;*/
-  height: 30em; /*10em;*/
-  /*position: absolute;*/
-  /*float: left;*/
-  margin-left: auto;
-  margin-right: auto;
-  display: inline-block;
-  cursor: pointer;
-  /*outline: solid 2px #fff;*/
-}
-.chartLabel {
-  font: 16px sans-serif;
-  fill: #ccc;
-}
-.arcLabel {
-  font: 10px sans-serif;
-  fill: #fff;
+/* slide content */
+.wrapper {
+  width: 100%;
+  min-width: 100%;
+  height: 900px;
+  position: relative;
+  margin: 0em 0em 0em 3.2em;
 }
 /*****************/
 /* MEDIA QUERIES */
@@ -408,7 +375,7 @@ donut-chart {
   }
   html { font-size: 20px; }
   body { padding-top: 2.6em; }
-  .slide { padding-left: 4.8em; }
+  .slide { padding-left: 1em; }
 }
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199px) {
@@ -418,8 +385,7 @@ donut-chart {
   }
   html { font-size: 18px; }
   body { padding-top: 5.6em; }
-  /*.slide { padding-left: 1em; }*/
-  .button-scroll { left: 43%; }
+  .slide { padding-left: 1em; }
 }
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991px) {
@@ -429,8 +395,7 @@ donut-chart {
   }
   html { font-size: 16px; }
   body { padding-top: 6.0em; }
-  /*.slide { padding-left: .8em; }*/
-  .button-scroll { left: 43%; }
+  .slide { padding-left: .8em; }
 }
 /* Extra small devices (phones, less than 768px) */
 /*@media (min-width: 311px) and (max-width: 767px) {*/
@@ -441,41 +406,11 @@ donut-chart {
   }
   html { font-size: 14px; }
   body { padding-top: 3.5em; }
-  /*.slide { padding-left: .8em; }*/
-  .button-scroll { left: 43%; }
+  .slide { padding-left: .8em; }
   .apptitle {
       font-size: 24px;
       top: 20%;
   }
 }
-/* Dealing with Bootstrap on tiny screens */
-/*@media (min-width: 210px) and (max-width: 310px) {
-  .test-media-queries p span:after {         
-      color: #FF5500;
-      content: 'Tiny Screen (min-width = 210px && max-width = 310px)';
-  }
-  html { font-size: 12px; }
-  body { padding-top: 6.5em; }
-  .slide { padding-left: .8em; }
-  .button-scroll { left: 43%; }
-  .apptitle {
-      font-size: 18px;
-      top: 12%;
-  }
-}*/
-/* Dealing with Bootstrap on micro screens */
-/*@media (min-width: 80px) and (max-width: 209px) {
-  .test-media-queries p span:after {         
-      color: #FF0000;
-      content: 'Micro Screen (max-width <= 209px)';
-  }
-  html { font-size: 10px; }
-  body { padding-top: 9.5em; }
-  .slide { padding-left: .8em; }
-  .button-scroll { left: 43%; }
-  .apptitle {
-      font-size: 16px;
-      top: 4%;
-  }
-}*/
+
 /* END CSS */
