Added in directive for eaa gauge data chart. Working on integratin ginto Conservation slide. Time scrubber with data display will follow.

--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -76,7 +76,8 @@
     <span class="slideno"><h1>Data Slide</h1></span>               
     <a class="button-scroll" data-slide="9" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <eaa-aquifers-boundary-map></eaa-aquifers-boundary-map>
+      <!-- <eaa-aquifers-boundary-map></eaa-aquifers-boundary-map> -->
+      <eaa-gauge-data-chart></eaa-gauge-data-chart>
     </div>
   </div>
 
