--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -46,7 +46,7 @@
 
 	<!-- Slide 5 -->
 	<div data-parallax-background class="slide" id="cons-slide5" data-slide="5" data-parallax-ratio="0.5">
-		<span class="slideno"><h1>Wild Rice</h1></span>
+		<span class="slideno"><h1>Artesian Springs</h1></span>
     <a class="button-scroll" data-slide="6" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <p alt="">Native and endangered species also benefit from the artesian springs whose discharge sustains downstream users and freshwater inflows entering the bays and estuaries of the Texas Gulf Coast.</p>
@@ -77,13 +77,16 @@
     <a class="button-scroll" data-slide="9" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <!-- <eaa-aquifers-boundary-map></eaa-aquifers-boundary-map> -->
-      <eaa-gauge-data-chart></eaa-gauge-data-chart>
+      <!-- <eaa-gauge-data-chart></eaa-gauge-data-chart> -->
+      <!-- <eaa-gauge-data-interactive></eaa-gauge-data-interactive> -->
+      <eaa-gauge-data-interactive-springs></eaa-gauge-data-interactive-springs>
+      <div class="chart-subtext">Note: Gaps in the individual data lines represent gaps in the collected gauge data for that year.</div>
     </div>
   </div>
 
   <!-- Slide 9 -->
   <div data-parallax-background class="slide" id="cons-slide9" data-slide="9" data-parallax-ratio="0.5">
-    <span class="slideno"><h1>Habitat Conservation Plan Overview</h1></span>               
+    <span class="slideno"><h1>Habitat Conservation Plan</h1></span>               
     <a class="button-scroll" id="reverse" data-slide="0" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <p alt="">TBD</p>
